Add flashing wrapper generation to nrfconnect examples (#8401)
As part of our interop testing we want flashing to be as easy as
possible and consistent across boards. To this end, the GN based builds
generate ".flash.py" helper scripts alongside any generated firmware.

With the move to nrfconnect, this functionality was lost for nrf5
boards. Bring it back via the cmake build.

Tested via:

for x in lighting-app lock-app pigweed-app shell; do
  (source scripts/activate.sh; cd examples/$x/nrfconnect; west build -b nrf52840dk_nrf52840 -t flashing_script)
done

cd examples/lighting-app/nrfconnect/ &&
  ./build/chip-nrfconnect-lighting-example/chip-nrfconnect-lighting-example.flash.py -s 683565606

(cherry picked from commit 28ec16ee017b1b8b6bcac76f5e881e45360e6f91)

--- a/examples/pump-app/nrfconnect/CMakeLists.txt
+++ b/examples/pump-app/nrfconnect/CMakeLists.txt
@@ -69,3 +69,5 @@ target_sources(app PRIVATE
                ${CHIP_ROOT}/src/app/clusters/bindings/bindings.cpp
                ${CHIP_ROOT}/src/app/clusters/on-off-server/on-off.cpp
                ${CHIP_ROOT}/src/app/clusters/operational-credentials-server/operational-credentials-server.cpp)
+
+include(${CHIP_ROOT}/config/nrfconnect/app/flashing.cmake)
